--- a/Proyecto2/SmileSoft/webapp/templates/inicio/confirmacion_usuario.html
+++ b/Proyecto2/SmileSoft/webapp/templates/inicio/confirmacion_usuario.html
@@ -25,52 +25,55 @@
  
 
     <body>
-   
-        <!--Inicio de Sesion bloque-->
-        <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <!------ Propios del estilo de la plantilla encontrada---------->
+        
 
-        <!-- <h2 class="text-center text-gray pt-5">  SmileSoft </h2> -->
-        <div align="center">
-            <br>
-            <br>
-            <br>
-            <h2 class="text-center text-gray pt-5">SmileSoft</h2>
-            <img src="{% static 'img/favicon.png' %}" width="120px" alt="logo">
-        </div>
-        <div class="container">
-            <div class="row justify-content-center align-items-center">
-                <div class="col-md-5">
-                        <!-- <table> -->
-                        <h3 class="text-center text-Gray"><i>¡Atención!</i> </h3>
-                        <div class="row justify-content-center align-items-center">
-                            <!-- <div class="col-md-10"> -->
-                            <p class="text-justify">
-                                <i>
-                                    Usted ya cuenta con un usuario. ¿Desea iniciar sesión?
-                                </i>
-                            </p>
-                            <!-- </div> -->
-                        </div>
-                        <div>
-                            <div align="center" > 
-                                <a href="/login/" class="btn btn-primary " style="width: 70px">OK</a>
-                                
-                            </div>
-                            <br>
-                            <div align="center">
-                                ¿No recuerda su contraseña?
-                                <a href="#" class="btn btn-link">Solicítelo aqui</a>
-                            </div>
+        <main>
+                <!--Inicio de Sesion bloque-->
+                <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+                <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+                <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+                <!------ Propios del estilo de la plantilla encontrada---------->
+
+                <!-- <h2 class="text-center text-gray pt-5">  SmileSoft </h2> -->
+                <div align="center">
+                    <br>
+                    <br>
+                    <br>
+                    <h2 class="text-center text-gray pt-5">SmileSoft</h2>
+                    <img src="{% static 'img/favicon.png' %}" width="120px" alt="logo">
                 </div>
-            </div>
-        </div>
-        <!-- </div> -->
+                <div class="container">
+                    <div class="row justify-content-center align-items-center">
+                        <div class="col-md-5">
+                                <!-- <table> -->
+                                <h3 class="text-center text-Gray"><i>¡Atención!</i> </h3>
+                                <div class="row justify-content-center align-items-center">
+                                    <!-- <div class="col-md-10"> -->
+                                    <p class="text-justify">
+                                        <i>
+                                            Usted ya cuenta con un usuario. ¿Desea iniciar sesión?
+                                        </i>
+                                    </p>
+                                    <!-- </div> -->
+                                </div>
+                                <div>
+                                    <div align="center" > 
+                                        <a href="/login/" class="btn btn-primary " style="width: 70px">OK</a>
+                                        
+                                    </div>
+                                    <br>
+                                    <div align="center">
+                                        ¿No recuerda su contraseña?
+                                        <a href="#" class="btn btn-link">Solicítelo aqui</a>
+                                    </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- </div> -->
 
-           <!--===CDN Separate Popper and Bootstrap JS ===-->
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+                <!--===CDN Separate Popper and Bootstrap JS ===-->
+                <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+      </main>
     </body>
 </html>
