--- a/Proyecto2/SmileSoft/webapp/templates/inicio/consultar_documento.html
+++ b/Proyecto2/SmileSoft/webapp/templates/inicio/consultar_documento.html
@@ -25,65 +25,79 @@
  
 
     <body>
-   
-        <!--Inicio de Sesion bloque-->
-        <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <!------ Propios del estilo de la plantilla encontrada---------->
+        <header id="header">
+            <nav class="navbar navbar-expand-sm bg-transparent navbar-transparent justify-content-end logo ">
+                    <div class="container-fluid">
+                        <!--no borrar-->
+                        <a class="nav-link active" aria-current="page" href="#"></a>
+                                <a class="nav-link" href="#"></a>
+                                <a class="nav-link" href="#"></a>
+                                <a class="nav-link disabled"></a>
+                        <!--no borrar-->
+                        <div align="center">  
+                            <a  class="navbar-brand" href="/panel_control/invitado/">   
+                            <strong style="color:#045F5F; font-size:22px;"> <i class="bi bi-at"></i> Inicio </strong>                         
+                            
+                                <img class="img-circle"  src="{% static 'img/favicon.png' %}"  width="80px" height="80px"> 
+                            </a>
+                        </div>
+                    </div>
+                    
+                </nav>  
+     </header>
+        <main>
+                <!--Inicio de Sesion bloque-->
+                <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+                <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+                <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+                <!------ Propios del estilo de la plantilla encontrada---------->
 
-        <h2 class="text-center text-gray pt-5">  SmileSoft </h2>
-        <div align="center"><img src="{% static 'img/favicon.png' %}" width="120px" alt="logo"></div>
-        <div class="container">
-            <div class="row justify-content-center align-items-center">
-                <div class="col-md-5">
-                    <form action="" method="post">
-                        {% csrf_token %}
-                        <!-- <table> -->
-                        <h4 class="text-center text-Gray"><i>Verificación de Registro</i> </h4>
-                        <div class="row justify-content-center align-items-center">
-                            <!-- <div class="col-md-10"> -->
-                            <p class="text-justify">
-                                <i>
-                                    Primero verificaremos si ya se ha registrado como paciente,
-                                    por favor ingrese su número de cédula de identidad:
-                                </i>
-                            </p>
-                            <!-- </div> -->
+                <h2 class="text-center text-gray pt-5">  SmileSoft </h2>
+                <div align="center"><img src="{% static 'img/favicon.png' %}" width="120px" alt="logo"></div>
+                <div class="container">
+                    <div class="row justify-content-center align-items-center">
+                        <div class="col-md-5">
+                            <form action="" method="post">
+                                {% csrf_token %}
+                                <!-- <table> -->
+                                <h4 class="text-center text-Gray"><i>Verificación de Registro</i> </h4>
+                                <div class="row justify-content-center align-items-center">
+                                    <!-- <div class="col-md-10"> -->
+                                    <p class="text-justify">
+                                        <i>
+                                            Primero verificaremos si ya se ha registrado como paciente,
+                                            por favor ingrese su número de cédula de identidad:
+                                        </i>
+                                    </p>
+                                    <!-- </div> -->
+                                </div>
+                                <br>
+                                <div class="form-group">
+                                    {% csrf_token %}
+                                    <b><label for="{{form.numero_documento.name}}">{{form.numero_documento.label}}</label></b>
+                                    {{form.numero_documento}}
+                                </div>
+                                <br>
+                                <div class="form-group" >
+                                    <!-- {% csrf_token %} -->
+                                    <div align="center"> 
+                                        <button style="height: 50px" type="submit" class="btn btn-primary">Buscar</button>
+                                    </div>
+
+                                </div>
+                            
+                                        
+                                <br>
+                                <br>
+                                <br>
+                               
+                                <!-- </table> -->
+                            </form>
                         </div>
-                        <br>
-                        <div class="form-group">
-                            {% csrf_token %}
-                            <b><label for="{{form.numero_documento.name}}">{{form.numero_documento.label}}</label></b>
-                            {{form.numero_documento}}
-                        </div>
-                        <br>
-                        <div class="form-group" >
-                            <!-- {% csrf_token %} -->
-                            <div align="center"> 
-                                <button style="height: 50px" type="submit" class="btn btn-primary">Buscar</button>
-                            </div>
-                        </div>
-                        <br>
-                        <br>
-                        <br>
-                        {% csrf_token %}
-                        <div class="alert alert-success" role="alert">
-                            <ul class="messages">
-                                {% for message in messages %}
-                                    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
-                                        {{ message }}
-                                    </li>
-                                {% endfor %}
-                            </ul>
-                        </div>
-                        <!-- </table> -->
-                    </form>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <!-- </div> -->
-
+                <!-- </div> -->
+            </main>
            <!--===CDN Separate Popper and Bootstrap JS ===-->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
