--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/asignar_tratamiento.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/asignar_tratamiento.html
@@ -2,11 +2,12 @@
 
 {%block content%}
 
-  <div class= "col-12 col-md-8 offset-md-2" >
+<div class= "col-12 col-md-8 offset-md-2" >
         <div class="card">
             <br>
             <center>  <h2>Asignar Tratamiento</h2> </center>
-                <form method="POST" id="group_form" novalidate="">
+            <!-- <div class="card-body"> -->
+                <form method="POST"id="group_form" novalidate="">
                     {%csrf_token%}
                         {%if mensaje%}
                             <div class="alert alert-success" role="alert">
@@ -14,20 +15,19 @@
                             </div>
                         {%endif%}
                         <br>
-                        {% if object%}
-                            <center>
-                                        <h5>
-                                           <b>Paciente:</b> <i>{{object.nombre}}  {{object.apellido}}</i>
-                                        </h5>
-                            </center>
-                        {% endif %}
+                        <center>
+                            <h5>
+                                <b>Paciente:</b> <i><td>{{ paciente.numero_documento.nombre }} {{paciente.numero_documento.apellido}}</td></i>
+                            </h5>
+                        </CEnter>
                     <div style="margin: 20px;" >
                         <table>
                             <div class="form-group">
-                                <label for="{{form.nombre_tratamiento.name}}" st><b>{{form.nombre_tratamiento.label}}</b></label>
-                                {{form.nombre_tratamiento}}
+                                <label for="{{form.tratamientos.name}}"><b>Tratamientos ConsulDent:</b></label>
+                                {{form.tratamientos}}
                             </div>
                         </table>
+                        <!-- <b>{{form.tratamientos.label}}</b> -->
                     </div>
                     <div class="d-flex justify-content-center">
                         <button class="btn btn-primary" type="submit" style="margin: 10px;">
@@ -41,6 +41,7 @@
                     </div>
                     <hr>
                 </form>
+            </div>
         </div>
     </div>
 {%endblock%}
